--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ website:
       - text: Hands-on Exercise
         menu:
           - text: Hands-on Exercise 1
+            href: Hands-On_Exercise1.qmd
     right:
       - href: index.qmd
         text: Home
