1 commit hands_on_ex1.1

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,8 @@ website:
         menu:
           - text: Hands-on Exercise 1
             href: Hands-On_Exercise1.qmd
+          - text: Hands-on Exercise 1.1
+            href: hands_on_ex1/hands_on_ex1.1.qmd
     right:
       - href: index.qmd
         text: Home
