1st commit in class ex1

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,14 @@ website:
             href: hands_on_ex1/hands_on_ex1.1.qmd
           - text: Hands-on Exercise 1.2
             href: hands_on_ex1/hands_on_ex1.2.qmd
+            
+      - text: In-class Exercise
+        menu: 
+          - text: In-class Exercise 1
+            href: in_class_ex1/in_class_ex1.qmd
+            
+      - text: Take-Home Exercise
+      
     right:
       - href: index.qmd
         text: Home
