--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
             href: hands_on_ex1/hands_on_ex1.2.qmd
           - text: Hands-on Exercise 2.1
             href: hands_on_ex2/hands_on_ex2.1.qmd
+          - text: Hands-on Exercise 2.2
+            href: hands_on_ex2/hands_on_ex2.2.qmd
             
       - text: In-class Exercise
         menu: 
