3rd commit hands_on_ex2.3 updated updated updated

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,15 +10,15 @@ website:
           - text: Hands-on Exercise 1
             href: Hands-On_Exercise1.qmd
           - text: Hands-on Exercise 1.1
-            href: hands_on_ex1/hands_on_ex1.1.qmd
+            href: hands_on_ex1/hands_on_ex1.1.html
           - text: Hands-on Exercise 1.2
-            href: hands_on_ex1/hands_on_ex1.2.qmd
+            href: hands_on_ex1/hands_on_ex1.2.html
           - text: Hands-on Exercise 2.1
-            href: hands_on_ex2/hands_on_ex2.1.qmd
+            href: hands_on_ex2/hands_on_ex2.1.html
           - text: Hands-on Exercise 2.2
-            href: hands_on_ex2/hands_on_ex2.2.qmd
+            href: hands_on_ex2/hands_on_ex2.2.html
           - text: Hands-on Exercise 2.3
-            href: hands_on_ex2/hands_on_ex2.3.qmd
+            href: hands_on_ex2/hands_on_ex2.3.html
             
       - text: In-class Exercise
         menu: 
