--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,7 @@ website:
       - text: Take-Home Exercise
         menu: 
           - text: Take-Home Exercise 1
+            href: take_home_ex1/take_home_ex1.html
           - text: Take-Home Exercise 2
       
     right:
