--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,14 +32,15 @@ website:
             href: in_class_ex2/in_class_ex2.html
           - text: In-class Exercise 2.2
             href: in_class_ex2/in_class_ex2.1.html
-          
-
+          - text: In-class Exercise 3
+            href: in_class_ex3/in_class_ex3.html
             
       - text: Take-Home Exercise
         menu: 
           - text: Take-Home Exercise 1
             href: take_home_ex1/take_home_ex1.html
           - text: Take-Home Exercise 2
+            
       
     right:
       - href: index.qmd
