--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,6 +45,7 @@ website:
           - text: Take-Home Exercise 1
             href: take_home_ex1/take_home_ex1.html
           - text: Take-Home Exercise 2
+            href: take_home_ex2/take_home_ex2.html
             
       
     right:
