1st commit in_class_ex4

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,6 +38,7 @@ website:
           - text: In-class Exercise 3
             href: in_class_ex3/in_class_ex3.html
           - text: In-class Exercise 4
+            href: in_class_ex4/in_class_ex4.html
           - text: In-class Exercise 5
             
       - text: Take-Home Exercise
