1st commit in_class_ex4.1

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,6 +39,8 @@ website:
             href: in_class_ex3/in_class_ex3.html
           - text: In-class Exercise 4
             href: in_class_ex4/in_class_ex4.html
+          - text: In-class Exercise 4.1
+            href: in_class_ex4/in_class_ex4.1.html
           - text: In-class Exercise 5
             
       - text: Take-Home Exercise
